--- a/main.ipynb
+++ b/main.ipynb
@@ -227,6 +227,58 @@
    "id": "c1789688",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# train_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "#     data_path,\n",
+    "#     validation_split=0.2,      # 20% for validation\n",
+    "#     subset=\"training\",\n",
+    "#     seed=42,\n",
+    "#     image_size=img_size,\n",
+    "#     batch_size=batch_size\n",
+    "# )\n",
+    "\n",
+    "# val_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "#     data_path,\n",
+    "#     validation_split=0.2,\n",
+    "#     subset=\"validation\",\n",
+    "#     seed=42,\n",
+    "#     image_size=img_size,\n",
+    "#     batch_size=batch_size\n",
+    "# )\n",
+    "\n",
+    "# print(\"Train batches:\", tf.data.experimental.cardinality(train_ds).numpy())\n",
+    "# print(\"Val batches:\", tf.data.experimental.cardinality(val_ds).numpy())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c275bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from collections import Counter\n",
+    "\n",
+    "# train_counter = Counter()\n",
+    "\n",
+    "# for _, label in train_ds.unbatch():\n",
+    "#     train_counter[int(label.numpy())] += 1\n",
+    "\n",
+    "# # Map class indices to names\n",
+    "# class_names = train_ds.class_names\n",
+    "# train_distribution = {class_names[i]: count for i, count in train_counter.items()}\n",
+    "\n",
+    "# print(\"Training set class distribution:\")\n",
+    "# for k, v in train_distribution.items():\n",
+    "#     print(f\"{k}: {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c2a1527",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
