shuffled all class datasets

--- a/main.ipynb
+++ b/main.ipynb
@@ -275,8 +275,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2c2a1527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffled_cloudy = (\n",
+    "    cloudy_ds\n",
+    "    .shuffle(buffer_size=1000)\n",
+    "    .batch(32)\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "\n",
+    "shuffled_green = (\n",
+    "    green_ds\n",
+    "    .shuffle(buffer_size=1000)\n",
+    "    .batch(32)\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "\n",
+    "shuffled_desert = (\n",
+    "    desert_ds\n",
+    "    .shuffle(buffer_size=1000)\n",
+    "    .batch(32)\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")\n",
+    "\n",
+    "shuffled_water = (\n",
+    "    water_ds\n",
+    "    .shuffle(buffer_size=1000)\n",
+    "    .batch(32)\n",
+    "    .prefetch(tf.data.AUTOTUNE)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae0474d",
    "metadata": {},
    "outputs": [],
    "source": []
