--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "0c6ae631",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import kagglehub\n",
     "from collections import defaultdict\n",
+    "from collections import Counter\n",
     "from PIL import Image\n"
    ]
   },
@@ -180,10 +181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "acf2a147",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloudy images: 1500\n",
+      "Desert images: 1131\n",
+      "Green images: 1500\n",
+      "Water images: 1500\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Cloudy images:\", count_images(cloudy_ds))\n",
     "print(\"Desert images:\", count_images(desert_ds))\n",
@@ -255,26 +267,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "#     data_path,\n",
-    "#     validation_split=0.2,      # 20% for validation\n",
-    "#     subset=\"training\",\n",
-    "#     seed=42,\n",
-    "#     image_size=img_size,\n",
-    "#     batch_size=batch_size\n",
-    "# )\n",
+    "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "    data_path,\n",
+    "    validation_split=0.2,      # 20% for validation\n",
+    "    subset=\"training\",\n",
+    "    seed=42,\n",
+    "    image_size=img_size,\n",
+    "    batch_size=batch_size\n",
+    ")\n",
     "\n",
-    "# val_ds = tf.keras.utils.image_dataset_from_directory(\n",
-    "#     data_path,\n",
-    "#     validation_split=0.2,\n",
-    "#     subset=\"validation\",\n",
-    "#     seed=42,\n",
-    "#     image_size=img_size,\n",
-    "#     batch_size=batch_size\n",
-    "# )\n",
+    "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
+    "    data_path,\n",
+    "    validation_split=0.2,\n",
+    "    subset=\"validation\",\n",
+    "    seed=42,\n",
+    "    image_size=img_size,\n",
+    "    batch_size=batch_size\n",
+    ")\n",
     "\n",
-    "# print(\"Train batches:\", tf.data.experimental.cardinality(train_ds).numpy())\n",
-    "# print(\"Val batches:\", tf.data.experimental.cardinality(val_ds).numpy())\n"
+    "print(\"Train batches:\", tf.data.experimental.cardinality(train_ds).numpy())\n",
+    "print(\"Val batches:\", tf.data.experimental.cardinality(val_ds).numpy())\n"
    ]
   },
   {
@@ -284,25 +296,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from collections import Counter\n",
+    "def count_class_number(dataset):\n",
+    "    train_counter = Counter()\n",
     "\n",
-    "# train_counter = Counter()\n",
+    "    for _, label in dataset.unbatch():\n",
+    "        train_counter[int(label.numpy())] += 1\n",
     "\n",
-    "# for _, label in train_ds.unbatch():\n",
-    "#     train_counter[int(label.numpy())] += 1\n",
+    "    # Map class indices to names\n",
+    "    class_names = dataset.class_names\n",
+    "    train_distribution = {class_names[i]: count for i, count in train_counter.items()}\n",
     "\n",
-    "# # Map class indices to names\n",
-    "# class_names = train_ds.class_names\n",
-    "# train_distribution = {class_names[i]: count for i, count in train_counter.items()}\n",
-    "\n",
-    "# print(\"Training set class distribution:\")\n",
-    "# for k, v in train_distribution.items():\n",
-    "#     print(f\"{k}: {v}\")"
+    "    print(\"Training set class distribution:\")\n",
+    "    for k, v in train_distribution.items():\n",
+    "        print(f\"{k}: {v}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "id": "2c2a1527",
    "metadata": {},
    "outputs": [],
