data preparation is done, need to begin dataset split

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "0c6ae631",
    "metadata": {},
    "outputs": [],
@@ -262,10 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "c1789688",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5631 files belonging to 4 classes.\n",
+      "Using 4505 files for training.\n",
+      "Found 5631 files belonging to 4 classes.\n",
+      "Using 1126 files for validation.\n",
+      "Train batches: 282\n",
+      "Val batches: 71\n"
+     ]
+    }
+   ],
    "source": [
     "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
     "    data_path,\n",
@@ -291,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "5c275bd4",
    "metadata": {},
    "outputs": [],
@@ -313,8 +326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "2c2a1527",
+   "execution_count": 53,
+   "id": "6ec05843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "id": "fae0474d",
    "metadata": {},
    "outputs": [
